Initial theme changes

--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -336,6 +336,273 @@
     --tag-background-red-01: var(--red/10);
     --tag-background-red-02: var(--red/15);
   }
+
+  .light-std-standard {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
+    --radius: 0.5rem;
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--emphasis);
+    --ai: var(--purple);
+    --ai-button-stop-1: 36 60% 95%;
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+    --diff-grey: hsl(0, 0%, 33%);
+    --diff-add-content--: hsl(156, 28%, 10%);
+    --diff-del-content--: hsl(356, 28%, 11%);
+    --diff-add-lineNumber--: hsl(153, 40%, 14%);
+    --diff-del-lineNumber--: hsl(358, 39%, 17%);
+    --diff-plain-content--: var(--background);
+    --diff-expand-content--: var(--background);
+    --diff-plain-lineNumber--: var(--background);
+    --diff-plain-lineNumber-color--: hsl(0, 0%, 100%);
+    --diff-hunk-content--: hsl(218, 26%, 12%);
+    --diff-hunk-lineNumber--: hsl(218, 26%, 12%);
+    --diff-add-content-highlight--: hsl(152, 37%, 24%);
+    --diff-del-content-highlight--: hsl(0, 38%, 26%);
+    --diff-add-widget--: hsl(216, 80%, 65%);
+    --diff-add-widget-color--: hsl(0, 0%, 100%);
+    --diff-empty-content--: var(--background);
+    --diff-hunk-content-color--: hsl(0, 0%, 100%);
+  }
+  .dark-std-standard {
+    --background: var(--grey-6);
+    --foreground: var(--grey-94);
+    --card: var(--grey-10);
+    --card-foreground: var(--white);
+    --popover: var(--grey-10);
+    --popover-foreground: var(--white);
+    --primary: var(--white);
+    --primary-background: var(--black);
+    --primary-foreground: var(--grey-10);
+    --primary-muted: var(--grey-70);
+    --primary-accent: 216 100% 60%;
+    --secondary: var(--grey-15);
+    --secondary-foreground: var(--white);
+    --secondary-background: var(--grey-6);
+    --secondary-muted: var(--grey-40);
+    --tertiary: var(--grey-12);
+    --tertiary-foreground: var(--white);
+    --tertiary-background: var(--grey-60);
+    --muted: var(--grey-15);
+    --muted-foreground: var(--grey-60);
+    --accent: var(--grey-15);
+    --accent-foreground: var(--white);
+    --destructive: var(--red);
+    --destructive-foreground: var(--white);
+    --border: var(--grey-15);
+    --border-background: var(--grey-10);
+    --input: var(--grey-15);
+    --input-background: var(--grey-10);
+    --ring: var(--grey-80);
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--purple);
+    --ai: var(--purple);
+    --ai-button-stop-1: 36 60% 95%;
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+  }
+
+  .light-tri-standard {
+    --background: 0 0% 100%;
+    --foreground: 20 14.3% 4.1%;
+    --card: 0 0% 100%;
+    --card-foreground: 20 14.3% 4.1%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
+    --primary: 24.6 95% 53.1%;
+    --primary-foreground: 60 9.1% 97.8%;
+    --secondary: 60 4.8% 95.9%;
+    --secondary-foreground: 24 9.8% 10%;
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 25 5.3% 44.7%;
+    --accent: 60 4.8% 95.9%;
+    --accent-foreground: 24 9.8% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 20 5.9% 90%;
+    --input: 20 5.9% 90%;
+    --ring: 24.6 95% 53.1%;
+    --radius: 0.5rem;
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--emphasis);
+    --ai: var(--purple);
+    --ai-button-stop-1: 36 60% 95%;
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+    --diff-grey: hsl(0, 0%, 33%);
+    --diff-add-content--: hsl(156, 28%, 10%);
+    --diff-del-content--: hsl(356, 28%, 11%);
+    --diff-add-lineNumber--: hsl(153, 40%, 14%);
+    --diff-del-lineNumber--: hsl(358, 39%, 17%);
+    --diff-plain-content--: var(--background);
+    --diff-expand-content--: var(--background);
+    --diff-plain-lineNumber--: var(--background);
+    --diff-plain-lineNumber-color--: hsl(0, 0%, 100%);
+    --diff-hunk-content--: hsl(218, 26%, 12%);
+    --diff-hunk-lineNumber--: hsl(218, 26%, 12%);
+    --diff-add-content-highlight--: hsl(152, 37%, 24%);
+    --diff-del-content-highlight--: hsl(0, 38%, 26%);
+    --diff-add-widget--: hsl(216, 80%, 65%);
+    --diff-add-widget-color--: hsl(0, 0%, 100%);
+    --diff-empty-content--: var(--background);
+    --diff-hunk-content-color--: hsl(0, 0%, 100%);
+  }
+  .dark-tri-standard {
+    --background: var(--grey-6);
+    --foreground: var(--grey-94);
+    --card: var(--grey-10);
+    --card-foreground: var(--white);
+    --popover: var(--grey-10);
+    --popover-foreground: var(--white);
+    --primary: var(--orange);
+    --primary-background: var(--black);
+    --primary-foreground: var(--grey-10);
+    --primary-muted: var(--grey-70);
+    --primary-accent: 216 100% 60%;
+    --secondary: var(--grey-15);
+    --secondary-foreground: var(--white);
+    --secondary-background: var(--grey-6);
+    --secondary-muted: var(--grey-40);
+    --tertiary: var(--grey-12);
+    --tertiary-foreground: var(--white);
+    --tertiary-background: var(--grey-60);
+    --muted: var(--grey-15);
+    --muted-foreground: var(--grey-60);
+    --accent: var(--grey-15);
+    --accent-foreground: var(--white);
+    --destructive: var(--red);
+    --destructive-foreground: var(--white);
+    --border: var(--grey-15);
+    --border-background: var(--grey-10);
+    --input: var(--grey-15);
+    --input-background: var(--grey-10);
+    --ring: var(--orange-80);
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--purple);
+    --ai: var(--purple);
+    --ai-button-stop-1: var(--orange);
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+  }
+
+  .light-pnd-standard {
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: 0 72.2% 50.6%;
+    --primary-foreground: 0 85.7% 97.3%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 72.2% 50.6%;
+    --radius: 0.5rem;
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--emphasis);
+    --ai: var(--purple);
+    --ai-button-stop-1: 36 60% 95%;
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+    --diff-grey: hsl(0, 0%, 33%);
+    --diff-add-content--: hsl(156, 28%, 10%);
+    --diff-del-content--: hsl(356, 28%, 11%);
+    --diff-add-lineNumber--: hsl(153, 40%, 14%);
+    --diff-del-lineNumber--: hsl(358, 39%, 17%);
+    --diff-plain-content--: var(--background);
+    --diff-expand-content--: var(--background);
+    --diff-plain-lineNumber--: var(--background);
+    --diff-plain-lineNumber-color--: hsl(0, 0%, 100%);
+    --diff-hunk-content--: hsl(218, 26%, 12%);
+    --diff-hunk-lineNumber--: hsl(218, 26%, 12%);
+    --diff-add-content-highlight--: hsl(152, 37%, 24%);
+    --diff-del-content-highlight--: hsl(0, 38%, 26%);
+    --diff-add-widget--: hsl(216, 80%, 65%);
+    --diff-add-widget-color--: hsl(0, 0%, 100%);
+    --diff-empty-content--: var(--background);
+    --diff-hunk-content-color--: hsl(0, 0%, 100%);
+  }
+  .dark-pnd-standard {
+    --background: var(--grey-6);
+    --foreground: var(--grey-94);
+    --card: var(--grey-10);
+    --card-foreground: var(--white);
+    --popover: var(--grey-10);
+    --popover-foreground: var(--white);
+    --primary: var(--red);
+    --primary-background: var(--black);
+    --primary-foreground: var(--grey-10);
+    --primary-muted: var(--grey-70);
+    --primary-accent: 216 100% 60%;
+    --secondary: var(--grey-15);
+    --secondary-foreground: var(--white);
+    --secondary-background: var(--grey-6);
+    --secondary-muted: var(--grey-40);
+    --tertiary: var(--grey-12);
+    --tertiary-foreground: var(--white);
+    --tertiary-background: var(--grey-60);
+    --muted: var(--grey-15);
+    --muted-foreground: var(--grey-60);
+    --accent: var(--grey-15);
+    --accent-foreground: var(--white);
+    --destructive: var(--red);
+    --destructive-foreground: var(--white);
+    --border: var(--grey-15);
+    --border-background: var(--grey-10);
+    --input: var(--grey-15);
+    --input-background: var(--grey-10);
+    --ring: var(--red-80);
+    --success: var(--green);
+    --error: var(--red);
+    --warning: var(--orange);
+    --emphasis: var(--purple);
+    --ai: var(--purple);
+    --ai-button-stop-1: var(--red);
+    --ai-button-stop-2: 335 58% 76%;
+    --ai-button-stop-3: 246 66% 72%;
+    --ai-button-stop-4: 188 97% 89%;
+  }
 }
 
 @layer base {
